fix spacing between elements in .mix-80s

--- a/styles/index.css
+++ b/styles/index.css
@@ -73,7 +73,7 @@ main {
 
 /* container for individual playlists 1-6
 can this change to div:first-child ?? */
-.good-afternoon section {
+.good-afternoon div {
     height: 75px;
     max-width: 35%;
     min-width: 30%;
@@ -82,27 +82,31 @@ can this change to div:first-child ?? */
     background-color: rgb(52, 52, 52);
     margin: 0px 0px 10px 20px;
     border-radius: 5px;
-    justify-content: space-between;
 }
 
-/* container for image and text for playlist 1 */
-.mix-80s-img, .coffee-shop-img {
+/* container for img, text, hover button in playlist 1 */
+.mix-80s {
     position: relative;
     left: 0;
-    top: 0;
-    display: inline-block;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 /* images for playlist 1-6 */
 .boombox, .coffee, .jul-dekoration, .roadtrip-1, .chill-1, .piano-keys {
-    width: 30%;
+    width: 75px;
     height: 100%;
     border-radius: 5px 0 0 5px;
 }
 
-.overlay {
-    height: 75px;
-    width: 50%;
+/* text in playlist 1 */
+.mix-80s p {
+    margin-left: 20px;
+    font-weight: bold;
+}
+
+/* hover button image */
+.play-button {
+    position: absolute;
     right: 0;
 }
